added augmentation correction

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,11 @@
             "type": "python",
             "request": "launch",
             "program": "${file}",
-            "args": ["--dataroot", "./datasets/maps", "--name", "maps_cyclegan", "--model", "cycle_gan"],
+            "args": ["--dataroot", "./datasets/maps", 
+                "--name", "maps_cyclegan", 
+                "--model", "cycle_gan", 
+                "--preprocess", "resize_and_crop_and_covariate", 
+                "--dataset_mode", "augmented"],
             "console": "integratedTerminal",
             "justMyCode": true,
             "cwd": "/nobackup/cole/pytorch-CycleGAN",
@@ -20,7 +24,12 @@
             "type": "python",
             "request": "launch",
             "program": "${file}",
-            "args": ["--dataroot", "./datasets/maps", "--name", "maps_cyclegan", "--model", "cycle_gan"],
+            "args": ["--dataroot", "./datasets/maps", 
+                "--name", "maps_cyclegan", 
+                "--dataset_mode", "augmented",
+                "--gpu_ids", "1",
+                "--preprocess", "resize_and_crop_and_covariate",
+                "--model", "cycle_gan"],
             "console": "integratedTerminal",
             "justMyCode": true,
             "cwd": "/nobackup/cole/pytorch-CycleGAN",
