--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,11 +9,11 @@
             "type": "python",
             "request": "launch",
             "program": "${file}",
-            "args": ["--dataroot", "./datasets/maps", 
-                "--name", "maps_cyclegan", 
+            "args": ["--dataroot", "Train_GAN_Normalized", 
+                "--name", "glioma_cyclegan", 
                 "--model", "cycle_gan", 
-                "--preprocess", "resize_and_crop_and_covariate", 
-                "--dataset_mode", "augmented"],
+                "--preprocess", "covariate", 
+                "--dataset_mode", "glioma"],
             "console": "integratedTerminal",
             "justMyCode": true,
             "cwd": "/nobackup/cole/pytorch-CycleGAN",
@@ -25,10 +25,10 @@
             "request": "launch",
             "program": "${file}",
             "args": ["--dataroot", "./datasets/maps", 
-                "--name", "maps_cyclegan", 
-                "--dataset_mode", "augmented",
+                "--name", "glioma_cyclegan", 
+                "--dataset_mode", "glioma",
                 "--gpu_ids", "1",
-                "--preprocess", "resize_and_crop_and_covariate",
+                "--preprocess", "covariate",
                 "--model", "cycle_gan"],
             "console": "integratedTerminal",
             "justMyCode": true,
