--- a/environment.yml
+++ b/environment.yml
@@ -4,12 +4,13 @@ channels:
 - defaults
 dependencies:
 - python=3.6
-- pytorch=1.4.0
+- pytorch=1.7.0
 - scipy
 - pip
 - pip:
   - dominate==2.4.0
-  - torchvision==0.5.0
+  # - torchvision==0.5.0
+  - torchvision
   - Pillow==6.1.0
   - numpy==1.16.4
   - visdom==0.1.8
