dataloaders fit cyclegan + glioma models together

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,16 +20,46 @@
             "python": "${command:python.interpreterPath}"
         },
         {
-            "name": "visualize",
+            "name": "visualize_model_outputs",
             "type": "python",
             "request": "launch",
             "program": "${file}",
-            "args": ["--dataroot", "./datasets/maps", 
+            "args": ["--dataroot", "Train_GAN_Normalized", 
                 "--name", "glioma_cyclegan", 
                 "--dataset_mode", "glioma",
                 "--gpu_ids", "1",
                 "--preprocess", "covariate",
                 "--model", "cycle_gan"],
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "cwd": "/nobackup/cole/pytorch-CycleGAN",
+            "python": "${command:python.interpreterPath}"
+        },
+        {
+            "name": "visualize_stain_perturbations",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "args": ["--dataroot", "Train_GAN_Normalized", 
+                "--name", "glioma_cyclegan", 
+                "--dataset_mode", "glioma",
+                "--gpu_ids", "1",
+                "--preprocess", "none",
+                "--model", "cycle_gan"],
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "cwd": "/nobackup/cole/pytorch-CycleGAN",
+            "python": "${command:python.interpreterPath}"
+        },
+        {
+            "name": "testing_normalization_on_model",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "args": ["--dataset", "Test_GAN_Normalized",
+                "--model_type", "gan-normalized",
+                "--batch-size", "64", 
+                "--output-dir", "glioma_cyclegan"],
             "console": "integratedTerminal",
             "justMyCode": true,
             "cwd": "/nobackup/cole/pytorch-CycleGAN",
