--- a/environment.yml
+++ b/environment.yml
@@ -9,8 +9,8 @@ dependencies:
 - pip
 - pip:
   - dominate==2.4.0
-  # - torchvision==0.5.0
-  - torchvision
+  - torchvision==0.5.0
+  # - torchvision
   - Pillow==6.1.0
   - numpy==1.16.4
   - visdom==0.1.8
